src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_help_overlay.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ BACKLOG 2 [ ]                ◦ RUNNING 1                   ◦ REVIEW 0                      ◦ DONE 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
 ╭──────────────────────────╮ │  ── active                │                              │ ╭──────────────────────────╮
 │  ▎ #1 Task 1         ╔ Help ════════════════════════════════════════════════════════════════╗#4 Task 4             │
 │   ◦ <1h              ║  Navigation                                                          ║ <1h                  │
 ╰──────────────────────║  [h/←] prev column     [j/↓] next task                               ║──────────────────────╯
 ╭──────────────────────║  [l/→] next column     [k/↑] prev task                               ║
 │  ▎ #2 Task 2         ║  [gg/[] top   [G/]] bottom   [Enter] task detail                     ║
 │   ◦ <1h              ║  [q] quit / exit epic   [Esc] clear selection                        ║
 ╰──────────────────────║                                                                      ║
                        ║  Actions                                                             ║
                        ║  [n] new task   [c] copy   [e] edit / enter epic                     ║
                        ║  [E] new epic   [m] move task to epic / reparent                     ║
                        ║  [Space] dispatch / resume / jump to agent*                          ║
                        ║  [H/L] move back/forward   [J/K] reorder item                        ║
                        ║  [x] done / delete   [D] quick dispatch                              ║
                        ║  [v] select   [a] select all   [/] search titles/ids                 ║
                        ║  [f] filter repos   [A] active only   [F] flat view                  ║
                        ║  [p] open PR   [o] sync repo   [z] fold section   [Z] fold epic      ║
                        ║  [s] toggle split (then [Space] swaps into pane)   [T] detach        ║
                        ║  [r] refresh feed   [U] auto-dispatch   [R] by repo                  ║
                        ║  [N] notifications                                                   ║
                        ║                                                                      ║
                        ║  * [Space] jumps to the agent's window if one is live,               ║
                        ║    or swaps into the split pane; else dispatch/resume; epic: enter   ║
                        ║                                                                      ║
                        ║  General                                                             ║
                        ║  [?] this help   [q] quit (or exit epic)                             ║
                        ║  Prefix+Space back to board  Prefix+e toggle tree  (tmux)            ║
                        ║  [?] or [Esc] to close                                               ║
                        ║                                                                      ║
                        ║                                                                      ║
                        ║                                                                      ║
                        ║                                                                      ║
                        ╚══════════════════════════════════════════════════════════════════════╝
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
[?] or [Esc] to close help
