src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_input_base_branch_form_with_history.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
                                                                                                                  🔕  [N]
        ▸ backlog 2 [ ]                 ◦ running 1                   ◦ review 0                     ◦ done 1
──────────────────────────────│───────────────────────────│──────────────────────────────│──────────────────────────────
──────────────────────────────│  ── active                │                              │──────────────────────────────
  ▌ #1 Task 1                 │  ▎ #3 Task 3              │                              │  ▎ #4 Task 4
   ◦ <1h                      │   ◉ running               │                              │   ✓ <1h
──────────────────────────────│───────────────────────────│                              │──────────────────────────────
  ▎ #2 Task 2                 │                           │                              │
   ◦ <1h                      │                           │                              │
──────────────────────────────│                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
                              │                           │                              │
┌ New Task ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  Title: My new task                                                                                                  │
│  Tag: feature                                                                                                        │
│  Description: A description                                                                                          │
│  Repo path: /repo/alpha                                                                                              │
│  Base branch: develop                                                                                                │
│  ► develop                                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Base branch:
