src/tui/tests/snapshots/dispatch_tui__tui__tests__snapshots__snapshot_kanban_with_projects_focused.snap
---
source: src/tui/tests/snapshots.rs
expression: rendered
---
[Default]   ▸ Tasks                                                                                               🔕  [N]
      ▸ Projects 1             ◦ backlog 2             ◦ running 1             ◦ review 0               ◦ done 1
 Projects (1) ──────────│────────────────────│────────────────────────│────────────────────────│────────────────────────
────────────────────────│────────────────────│  ── active             │                        │────────────────────────
▌ Default ◉             │  ▎ #1 Task 1       │  ▎ #3 Task 3           │                        │  ▎ #4 Task 4
   4 tasks              │   ◦ <1h            │   ◉ running            │                        │   ✓ <1h
────────────────────────│────────────────────│────────────────────────│                        │────────────────────────
                        │  ▎ #2 Task 2       │                        │                        │
                        │   ◦ <1h            │                        │                        │
                        │────────────────────│                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
                        │                    │                        │                        │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────







[h] projects  [a] select all  [n]ew  [E]pic  [D] quick  [S]plit  [F]lat  [f]ilter  [I] learnings  [?] help  [q]uit
